--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="css/topnews.css" />
+    <link rel="stylesheet" href="css/primenews.css" />
     <title>Bangla Khabar</title>
   </head>
   <body>
@@ -169,6 +170,70 @@
                 <h5>Lorem ipsum dolor sit amet</h5>
                 There is no one who loves pain itself, who seeks after it and
                 wants to have itself.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class="section_name">
+      <div class="container">
+        <div class="row">
+
+        </div>
+      </div>
+    </section> -->
+    <section class="prime_news py-1">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="main_feature_news">
+              <div class="block_feature_new">
+                <h2>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </h2>
+                <div class="cat_writer">
+                  <span>Tech</span> sayam rahman robin
+                </div>
+                <p>
+                  sodales libero. Nam cursus vitae justo et fermentum. Ut eu
+                  interdum quam, tempus ullamcorper ligula. Curabitur tempus
+                  erat convallis, egestas nisi vitae, accumsan ante. Duis
+                  consectetur, diam et dignissim accumsan, nibh massa
+                  ullamcorper risus.
+                </p>
+              </div>
+              <div class="feature_img">
+                <img src="img/news1.jpg" alt="" />
+              </div>
+              <!-- <div style="border-left: 1px solid black; margin: 0 7.5px"></div> -->
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="feature_small_block">
+              <div class="feature_news_item">
+                <h4>Donec blandit quis Vestibulum quis dui.</h4>
+                <p>
+                  retium enim. Fusce finibus facilisis dui, eu pretium erat.
+                  Donec nec eleifend ligula, eget suscipit lectus.
+                </p>
+              </div>
+              <div class="feature_news_item">
+                <h4>Donec blandit quis Vestibulum quis dui.</h4>
+                <p>
+                  retium enim. Fusce finibus facilisis dui, eu pretium erat.
+                  Donec nec eleifend ligula, eget suscipit lectus.
+                </p>
+              </div>
+              <div class="feature_news_item">
+                <h4>Donec blandit ante.Vestibulum quis volutpat leo.</h4>
+                <p>
+                  retium enim. Fusce finibus facilisis dui, eu pretium erat.
+                  Donec nec eleifend ligula, eget suscipit lectus. retium enim.
+                  Fusce finibus facilisis dui, eu pretium erat. Donec nec
+                  eleifend ligula, eget suscipit lectus.
+                </p>
               </div>
             </div>
           </div>
